--- a/templates/edit.html
+++ b/templates/edit.html
@@ -6,13 +6,14 @@
   <meta name='keywords' content=''>
   <meta name='description' content="">
   <meta name='viewport' content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="static/img/twitter.png">
 
   <link rel="stylesheet" media='screen and (min-width:0) and (max-width:375px)' href="static/css/edit_sp.css">
   <link rel="stylesheet" media='screen and (min-width:376px) and (max-width:768px)' href="static/css/edit_pad.css">
   <link rel="stylesheet" media='screen and (min-width:769px)' href="static/css/edit.css">
 
 
-  <title>編集</title>
+  <title>Tukutter</title>
 
 </head>
 
@@ -27,7 +28,7 @@
       <div class="back">
         <a href="/pro"><input type="submit" value="戻る" /></a>
       </div>
-      
+
     </div>
     <div class="nav">
 
