--- a/templates/pro.html
+++ b/templates/pro.html
@@ -6,7 +6,7 @@
   <meta name='keywords' content=''>
   <meta name='description' content="">
   <meta name='viewport' content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" media='screen' href="static/css/pro.css">
+  <link rel="shortcut icon" href="static/img/twitter.png">
 
   <link rel="stylesheet" media='screen and (min-width:0) and (max-width:375px)' href="static/css/pro_sp.css">
   <link rel="stylesheet" media='screen and (min-width:376px) and (max-width:768px)' href="static/css/pro_pad.css">
@@ -16,7 +16,7 @@
   <script type="text/javascript" src="static/js/common.js"></script>
 
 
-  <title>tukutter</title>
+  <title>Tukutter</title>
 
 </head>
 
