--- a/templates/top.html
+++ b/templates/top.html
@@ -6,6 +6,7 @@
   <meta name='keywords' content=''>
   <meta name='description' content="">
   <meta name='viewport' content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="static/img/twitter.png">
 
   <link rel="stylesheet" media='screen and (min-width:0) and (max-width:375px)' href="static/css/top_sp.css">
   <link rel="stylesheet" media='screen and (min-width:376px) and (max-width:768px)' href="static/css/top_pad.css">
@@ -16,7 +17,7 @@
 
 
 
-  <title>tukutter</title>
+  <title>Tukutter</title>
 
 </head>
 
