--- a/templates/tweet.html
+++ b/templates/tweet.html
@@ -6,13 +6,13 @@
   <meta name='keywords' content=''>
   <meta name='description' content="">
   <meta name='viewport' content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" media='screen' href="static/css/tweet.css">
+  <link rel="shortcut icon" href="static/img/twitter.png">
 
   <link rel="stylesheet" media='screen and (min-width:0) and (max-width:375px)' href="static/css/tweet_sp.css">
   <link rel="stylesheet" media='screen and (min-width:376px) and (max-width:768px)' href="static/css/tweet_pad.css">
   <link rel="stylesheet" media='screen and (min-width:769px)' href="static/css/tweet.css">
 
-  <title>tukutter</title>
+  <title>Tukutter</title>
 
 </head>
 
