--- a/templates/user_pro.html
+++ b/templates/user_pro.html
@@ -6,6 +6,7 @@
   <meta name='keywords' content=''>
   <meta name='description' content="">
   <meta name='viewport' content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="../static/img/twitter.png">
 
   <link rel="stylesheet" media='screen and (min-width:0) and (max-width:375px)' href="../static/css/user_pro_sp.css">
   <link rel="stylesheet" media='screen and (min-width:376px) and (max-width:768px)' href="../static/css/user_pro_pad.css">
@@ -14,7 +15,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
   <script type="text/javascript" src="../static/js/common.js"></script>
 
-  <title>tukutter</title>
+  <title>Tukutter</title>
 
 </head>
 
